feat: meta added

--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Bluejay Drywall & Painting</title>
 
-    <meta name="description"
-        content="Contact us for all your HVAC service inquiries in Rockford, Illinois. Get in touch for professional consultation and reliable HVAC services.">
-    <meta name="keywords"
-        content="Contact us, get in touch, HVAC services, Rockford, Illinois, inquiries, consultation">
-    <!-- CSS -->
+    <meta name="description" content="Get in touch with Bluejay Installations. Questions, quotes, or collaborations? Contact us for exceptional service today!">
+    <meta name="keywords" content="contact, Bluejay Installations, questions, quotes, collaborations, exceptional service">
+    
+        <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
