--- a/deck-installation-repair-rockford.html
+++ b/deck-installation-repair-rockford.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deck Installation and Repair Services in Rockford, Illinois | Bluejay Drywall & Painting</title>
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Enhance your outdoor space with expert deck installation and repair services in Rockford. Enjoy a beautifully crafted deck today!">
+    <meta name="keywords" content="deck, installation, repair, services, Rockford, outdoor, expert, beautifully crafted">    
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -161,7 +161,7 @@
     <!-- Services -->
     <section id="services" class="services-section">
         <div class="container">
-            <div class="topic-box" data-aos="fade-right">
+            <div class="topic-box">
                 <p class="sub-header sub-header-white">Transform Your Living Spaces</p>
                 <h2 class="header text-white">Other Services</h2>
             </div>
