--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!-- Services -->
     <section id="services" class="services-section">
         <div class="container">
-            <div class="topic-box" data-aos="fade-right">
+            <div class="topic-box">
                 <p class="sub-header sub-header-white">Transform Your Living Spaces</p>
                 <h2 class="header text-white">Our Top Class Services</h2>
             </div>
@@ -340,8 +340,8 @@
                 <div class="column">
                     <img class="quote" src="/img/quote.png" alt="Quote Icon 2">
                     <p class="data">
-                        Their attention to detail and commitment to quality exceeded my expectations. Outstanding service and results. Highly recommend and will rehire. Job
-                        well done!
+                        Their attention to detail and commitment to quality exceeded my expectations. Outstanding
+                        service and results. Highly recommend and will rehire.
                     </p>
                     <div class="user-info">
                         <div class="img-div">
