--- a/trim-services-rockford.html
+++ b/trim-services-rockford.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Residential Painting Services in Rockford, Illinois | Bluejay Drywall & Painting</title>
+    <title>Trim Services in Rockford, Illinois | Bluejay Drywall & Painting</title>
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Perfect your interior spaces with expert trim installation and repair services in Rockford. Meticulous craftsmanship for a polished finish.">
+    <meta name="keywords" content="trim, services, Rockford, interior, expert, meticulous craftsmanship, polished finish">    
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -160,7 +160,7 @@
     <!-- Services -->
     <section id="services" class="services-section">
         <div class="container">
-            <div class="topic-box" data-aos="fade-right">
+            <div class="topic-box">
                 <p class="sub-header sub-header-white">Transform Your Living Spaces</p>
                 <h2 class="header text-white">Other Services</h2>
             </div>
