--- a/cabinets-installation-repair-services-rockford.html
+++ b/cabinets-installation-repair-services-rockford.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cabinets Installation & Repair Services in Rockford, Illinois | Bluejay Drywall & Painting</title>
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Transform your space with expert cabinet installation and repair services in Rockford. Enhance functionality and aesthetics today!">
+    <meta name="keywords" content="cabinets, installation, repair, services, Rockford, experts, functionality, aesthetics">
+    
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -160,7 +161,7 @@
     <!-- Services -->
     <section id="services" class="services-section">
         <div class="container">
-            <div class="topic-box" data-aos="fade-right">
+            <div class="topic-box">
                 <p class="sub-header sub-header-white">Transform Your Living Spaces</p>
                 <h2 class="header text-white">Other Services</h2>
             </div>
