--- a/drywall-services-rockford.html
+++ b/drywall-services-rockford.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drywall Services in Rockford, Illinois | Bluejay Drywall & Painting</title>
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Perfect your interior with expert drywall services in Rockford. Meticulous craftsmanship for a flawless finish.">
+    <meta name="keywords" content="drywall, services, Rockford, interior, expert, meticulous craftsmanship, flawless finish">
+    
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -160,7 +161,7 @@
     <!-- Services -->
     <section id="services" class="services-section">
         <div class="container">
-            <div class="topic-box" data-aos="fade-right">
+            <div class="topic-box">
                 <p class="sub-header sub-header-white">Transform Your Living Spaces</p>
                 <h2 class="header text-white">Other Services</h2>
             </div>
