fix: page title

--- a/trim-services-rockford.html
+++ b/trim-services-rockford.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trim Services in Rockford, Illinois | Bluejay Drywall & Painting</title>
+    <title>Trim Services in Rockford, IL | Bluejay Drywall & Painting</title>
 
     <meta name="description" content="Perfect your interior spaces with expert trim installation and repair services in Rockford. Meticulous craftsmanship for a polished finish.">
     <meta name="keywords" content="trim, services, Rockford, interior, expert, meticulous craftsmanship, polished finish">    
