fix: index page title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painting Services in Rockford, Illinois | Bluejay Drywall & Painting</title>
+    <title>Painting Services in Rockford, IL | Bluejay Drywall & Painting</title>
 
     <meta name="description"
         content="Revamp your space with Bluejay Drywall and Painting. Expert drywall and painting services in Rockford, IL. Call now for a free estimate!">
