--- a/commercial-painting-services-rockford.html
+++ b/commercial-painting-services-rockford.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="info-div" data-aos="fade-left">
                     <p class="sub-header">Bluejay Drywall & Painting</p>
-                    <h3 class="header">Commercial Painting Services in Rockford, IL</h3>
+                    <h3 class="header">Expert Commercial Painting Services in Rockford, IL</h3>
 
                     <p class="my-4">
                         Making the right choice for your commercial space is crucial. At Bluejay Commercial Services, we're not
@@ -195,9 +195,9 @@
 
                 <div class="service">
                     <div class="img-div">
-                        <img src="/img/decks.svg" alt="Decks Installation">
+                        <img src="/img/decks.svg" alt="Deck Installation">
                     </div>
-                    <h4><a title="Decks Installation & Repairs" href="/deck-installation-repair-rockford.html">Decks
+                    <h4><a title="Deck Installation & Repairs" href="/deck-installation-repair-rockford.html">Deck
                             Installation & Repair <i class="fa-solid fa-chevron-right fs-16"></i></a></h4>
                     <p>Picture your gatherings on a revitalized deck, designed for lasting enjoyment.</p>
                 </div>
@@ -400,8 +400,8 @@
                             </a>
                         </p>
                         <p>
-                            <a title="Decks Installation" href="deck-installation-repair-rockford.html">
-                                Decks Installation
+                            <a title="Deck Installation" href="deck-installation-repair-rockford.html">
+                                Deck Installation
                             </a>
                         </p>
                         <p>
