--- a/residential-painting-services-rockford.html
+++ b/residential-painting-services-rockford.html
@@ -66,7 +66,7 @@
                 <div class="d-lg-flex">
                     <div class="info-div w-100">
                         <h1 class="mb-5 text-center">
-                            Painting Services
+                           Residential Painting Services
                         </h1>
                         <div class="d-flex justify-content-center mt-xl-4 mt-5">
                             <a title="Call Us Now" href="tel:+17797711143"
@@ -195,9 +195,9 @@
 
                 <div class="service">
                     <div class="img-div">
-                        <img src="/img/decks.svg" alt="Decks Installation">
+                        <img src="/img/decks.svg" alt="Deck Installation">
                     </div>
-                    <h4><a title="Decks Installation & Repairs" href="/decks-installation-repair-rockford.html">Decks
+                    <h4><a title="Deck Installation & Repairs" href="/deck-installation-repair-rockford.html">Deck
                             Installation & Repair <i class="fa-solid fa-chevron-right fs-16"></i></a></h4>
                     <p>Picture your gatherings on a revitalized deck, designed for lasting enjoyment.</p>
                 </div>
@@ -400,8 +400,8 @@
                             </a>
                         </p>
                         <p>
-                            <a title="Decks Installation" href="decks-installation-repair-rockford.html">
-                                Decks Installation
+                            <a title="Deck Installation" href="deck-installation-repair-rockford.html">
+                                Deck Installation
                             </a>
                         </p>
                         <p>
