--- a/indoor-painting-services-rockford.html
+++ b/indoor-painting-services-rockford.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="flex">
                 <div class="img-div" data-aos="fade-right">
-                    <img style="object-position: end;" src="/img/happy-painter.jpg" alt="Happy Painter">
+                    <img style="object-position: end;" src="/img/beautiful-wall.jpg" alt="Happy Painter">
                 </div>
                 <div class="info-div" data-aos="fade-left">
                     <p class="sub-header">Bluejay Drywall & Painting</p>
@@ -195,9 +195,9 @@
 
                 <div class="service">
                     <div class="img-div">
-                        <img src="/img/decks.svg" alt="Decks Installation">
+                        <img src="/img/decks.svg" alt="Deck Installation">
                     </div>
-                    <h4><a title="Decks Installation & Repairs" href="/decks-installation-repair-rockford.html">Decks
+                    <h4><a title="Deck Installation & Repairs" href="/deck-installation-repair-rockford.html">Deck
                             Installation & Repair <i class="fa-solid fa-chevron-right fs-16"></i></a></h4>
                     <p>Picture your gatherings on a revitalized deck, designed for lasting enjoyment.</p>
                 </div>
@@ -400,8 +400,8 @@
                             </a>
                         </p>
                         <p>
-                            <a title="Decks Installation" href="decks-installation-repair-rockford.html">
-                                Decks Installation
+                            <a title="Deck Installation" href="deck-installation-repair-rockford.html">
+                                Deck Installation
                             </a>
                         </p>
                         <p>
